--- a/terraform/charts/configconnector/templates/pubsub-topic.yaml
+++ b/terraform/charts/configconnector/templates/pubsub-topic.yaml
@@ -3,7 +3,7 @@ apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
 kind: PubSubTopic
 metadata:
   annotations:
-    cnrm.cloud.google.com/project-id: {{ .Values.gcloud.project }}
+    cnrm.cloud.google.com/project-id: {{ $.Values.gcloud.project }}
   labels:
     environment: test
   name: {{ $value.name }}
