--- a/terraform/charts/configconnector/templates/pubsub-topic.yaml
+++ b/terraform/charts/configconnector/templates/pubsub-topic.yaml
@@ -2,6 +2,7 @@
 apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
 kind: PubSubTopic
 metadata:
+  namespace: {{ $.Values.namespace.name }}
   annotations:
     cnrm.cloud.google.com/project-id: {{ $.Values.gcloud.project }}
   labels:
