--- a/terraform/charts/configconnector/templates/namespace.yaml
+++ b/terraform/charts/configconnector/templates/namespace.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
     name: {{ .Values.namespace.name }}
+    annotations:
+        cnrm.cloud.google.com/project-id: {{ $.Values.gcloud.project }}
     labels:
         name: {{ .Values.namespace.name }}
 {{- end -}}
