Added google apis enable

--- a/terraform/charts/configconnector/values.yaml
+++ b/terraform/charts/configconnector/values.yaml
@@ -9,6 +9,7 @@ gcloud:
     email: ""
   services:
     - storage.googleapis.com
+    - pubsub.googleapis.com
   resources:
     topics:
       - name: test
