--- a/terraform/charts/configconnector/templates/gcloud-services.yaml
+++ b/terraform/charts/configconnector/templates/gcloud-services.yaml
@@ -1,6 +1,21 @@
 {{- range $key, $value := .Values.gcloud.services -}}
+---
 apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
 kind: Service
 metadata:
   name: {{ $value }}
+  namespace: {{ $.Values.namespace.name }}
+{{- end -}}
+{{- range $key, $value := .Values.gcloud.resources.topics -}}
+---
+apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
+kind: PubSubTopic
+metadata:
+  namespace: {{ $.Values.namespace.name }}
+  annotations:
+    cnrm.cloud.google.com/force-destroy: "true"
+    cnrm.cloud.google.com/project-id: {{ $.Values.gcloud.project }}
+  labels:
+    environment: test
+  name: {{ $value.name }}
 {{- end -}}
