--- a/terraform/k8s/configconnector.yml
+++ b/terraform/k8s/configconnector.yml
@@ -2,6 +2,7 @@ apiVersion: core.cnrm.cloud.google.com/v1beta1
 kind: ConfigConnector
 metadata:
   name: configconnector.core.cnrm.cloud.google.com
+  app.kubernetes.io/managed-by: Helm
 spec:
- mode: cluster
- googleServiceAccount: "gke-cluster-testing@sandbox-233511.iam.gserviceaccount.com" 
+  mode: cluster
+  googleServiceAccount: "${ sa_mail }"
