--- a/terraform/charts/configconnector/templates/gcloud-services.yaml
+++ b/terraform/charts/configconnector/templates/gcloud-services.yaml
@@ -7,6 +7,8 @@ kind: Service
 metadata:
   name: {{ $value }}
   namespace: {{ $.Values.namespace.name }}
+  annotations:
+    cnrm.cloud.google.com/project-id: {{ $.Values.gcloud.project }}
 {{ end }}
 
 
@@ -29,6 +31,7 @@ metadata:
 apiVersion: storage.cnrm.cloud.google.com/v1beta1
 kind: StorageBucket
 metadata:
+  namespace: {{ $.Values.namespace.name }}
   annotations:
     cnrm.cloud.google.com/force-destroy: "true"
     cnrm.cloud.google.com/project-id: {{ $.Values.gcloud.project }}
